<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RandoMyZik</string>
    <string name="app_name_test">RandoMyZik Test</string>

    <string name="edit_single_track_title">Single track flag editor</string>
    <string name="edit_single_track_msg">Mark this track as unread?</string>
    <string name="edit_all_tracks_title">%1$d tracks</string>
    <string name="edit_all_tracks_msg">Mark all tracks as unread?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_yes_play">Yes and play</string>
    <string name="dialog_album">Just this album</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="switch_mode">Random mode</string>
    <string name="switch_mode_track">Track</string>
    <string name="switch_mode_album">Album</string>
    <string name="action_settings">Settings</string>
    <string name="action_rescan">Rescan</string>
    <string name="title_activity_settings">Settings</string>
 
    <!-- Preference Titles -->
    <string name="amp_header">Ampache server</string>

    <!-- Ampache Preferences -->
    <string name="amp_title">Use ampache server</string>
    <string name="amp_summary_on">Playlist read from Ampache server</string>
    <string name="amp_summary_off">Playlist read from local media folder</string>
    <string name="amp_server">Server</string>
    <string name="amp_api">Use API key</string>
    <string name="amp_api_on">Authenticate with API key</string>
    <string name="amp_api_off">Authenticate with user / password</string>
    <string name="amp_api_key">API key</string>
    <string name="amp_user">Username</string>
    <string name="amp_pwd">Password</string>
    <string name="amp_catalog">Catalog</string>
    <string name="amp_streaming">Play mode</string>

    <!-- Rescan dialog -->
    <string name="rescan_title">Ampache scanning options</string>
    <string name="rescan_msg">Which catalog would you like to refresh?</string>
    <string name="rescan_current">Current</string>
    <string name="rescan_all">All</string>

    <!-- Info -->
    <string name="info">Info</string>
    <string name="info_play_end">Playlist ended</string>
    <string name="info_track_summary">Track: %1$d/%2$d Playlist read: %3$.1f%%</string>
    <string name="info_scanning">Scanning audio files, please wait...</string>
    <string name="info_searching">Searching in local directory: %1$s</string>
    <string name="info_cat_searching">Searching in catalog: %1$s</string>
    <string name="info_inserting">Inserting tracks...</string>
    <string name="info_updating">Updating tracks...</string>

    <!-- Error -->
    <string name="error">Error</string>
    <string name="err_no_file">No audio file found in music directory</string>
    <string name="err_no_perms">Read/write storage permissions required</string>
    <string name="err_all_read">Nothing else to read</string>
    <string name="err_media_player">Track skipped due to media player error (%1$d, %2$d). Check Android documentation for details.</string>
    <string name="err_amp_invalid_auth">Invalid authentication</string>
    <string name="err_amp_state_unexcepted">Localplay current state (%1$s) is not as excepted</string>
    <string name="err_amp_excepted_state">Localplay current state (%1$s) is not as excepted (%2$s)</string>
    <string name="err_amp_track_unexcepted">Localplay current track is not as excepted</string>
    <string name="err_amp_cat_undefined">Catalog undefined, please check settings...</string>

    <!-- Android Auto -->
    <string name="auto_warning">Be vigilant while driving, only interact with your phone when your vehicle is stopped.</string>
    <string name="auto_item1">My device</string>
    <string name="auto_item1_folder">Music folder</string>
    <string name="auto_item2">Ampache catalogs</string>

</resources>
