<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/amp_header">

        <SwitchPreferenceCompat
            app:key="amp"
            app:title="@string/amp_title"
            app:summaryOff="@string/amp_summary_off"
            app:summaryOn="@string/amp_summary_on" />

        <EditTextPreference
            app:defaultValue="https://your.ampache-server.com"
            app:dependency="amp"
            app:key="amp_server"
            app:title="@string/amp_server"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue=""
            app:dependency="amp"
            app:key="amp_api_key"
            app:title="@string/amp_api_key"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue=""
            app:dependency="amp"
            app:key="amp_catalog"
            app:title="@string/amp_catalog"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>